src/objects/NebulaLog__c.object
<CustomObject>
    <description>Stores log records, as well as attachments, that are generated by the Nebula framework.</description>
    <fields>
        <fullName>InitialClass__c</fullName>
        <label>Initial Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InitialModule__c</fullName>
        <label>Initial Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypesSettings__c</fullName>
        <label>Record Types Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RepositorySettings__c</fullName>
        <label>Repository Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TriggerHandlerSettings__c</fullName>
        <label>Trigger Handler Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Nebula Log</label>
    <listViews>
        <fullName>All_Logs</fullName>
        <columns>NAME</columns>
        <columns>TransactionId__c</columns>
        <columns>InitialClass__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>My_Logs</fullName>
        <columns>NAME</columns>
        <columns>TransactionId__c</columns>
        <columns>InitialClass__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nebula Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>